21 Feb 2018
move: project classes to src
add: namespace to project classes
move: manage jquery with npm
fix: usercp.php password change
fix: AJAX Chat not loggin in user when not in online list
replace: some globals with new Class()
move: begin moving functions to class methods

18 Feb 2018
remove: remember me cookies when user logs out
move: all cookie functions to cookie class
move: foreign key scripts to database folder for use after install folder removed
add: Torrent Class
add: User Class

17 Feb 2018
fix: stylesheets for firefox, should now appear the same in all browsers
fix: unauthenticated user redirected to login
move: all session related tasks to Session class
add: encrypted remember me cookie, set at 1 year
move: AJAX Chat cookies to localstorage, no need to pass them back and forth with each request

10 Feb 2018
fix: delete cookie at logout
fix: admin failedlogins.php
add: secure cookie store for userID
remove: userID from sessions
remove: call to undefined var arcade_top_scores.php
update: AJAX Chat polling timer
update:image_proxy function to match updated simple image proxy
update: prefer ogg over mp3 audio
add: missing ogg/wav sound files
add: anonymize url in advertise block

9 Feb 2018
fix: wrong user var used in recover.php

7 Feb 2018
update: a few minor fixes

5 Feb 2018
update: google books api, track api usage and disable if exceeded. cache only book data, not formatting
fix: birthday cleanup
update: books function check if empty
remove: duplicate trivia questions

4 Feb 2018
update: download torrent
update: delete torrent
update: edit torrent
update: add flush cache for UC_MAX
update: redis cache to choose database
update: trivia always autrefresh, hide days when lees than 1 day
update: rating when torrent not downloaded
update: queries block
fix: cache variable
add: cache stats for memcache, redis, apcu and files
hide: display of stats from all but staff

3 Feb 2018
fix: freeuser_update.php
add: redirect to login on no session