@@ -20,6 +20,11 @@ class Session
         $this->cache = new Cache();
     }
 
+    public function __destruct()
+    {
+        // TODO: Implement __destruct() method.
+    }
+
     /**
      * @return bool
      * @throws Exception
